# PiB

./: .gitignore  README.md
.github/workflows/: deploy.yml  rust.yml
msa/: Cargo.toml
msa/input/: chrUn_GL4563.fa  chrUn_GL4563_100.fa  chrUn_GL4563_300.fa  covid-variants.fa  random-10-1000.fa  random-10-10000.fa  random-10-5000.fa  random-5-1000.fa  random-5-10000.fa  random-5-5000.fa  submat.txt  test_short.fasta
msa/input/Shorter Sequences/: chrUn_GL4563_200.fa  chrUn_GL4563_400.fa  chrUn_GL4563_500.fa  chrUn_GL4563_600.fa
msa/src/: adjacency_matrix.rs  alignment.rs  fasta.rs  fasta_parser.rs  gusfields.rs  kruskal.rs  main.rs  utils.rs  wasm.rs
msa/src/algorithms/: adjacency_matrix.rs  gusfields.rs  mod.rs
msa/src/benchmarks/: alignment.rs  gusfields.rs
msa/src/tests/: adjacency_matrix.rs  alignment.rs  fasta.rs  gusfields.rs  utils.rs
msa/www/: constants.js  index.css  index.html  index.js  package-lock.json  package.json  relativeplugin.js  webpack.config.js
report/: Bibliography.bib  ClassicReport.tex  classicthesis-config.tex
report/FrontBackmatter/: DirtyTitlepage.tex  Titleback.tex  Titlepage.tex
