[package]
name = "msa"
version = "0.1.0"
edition = "2021"
authors = ["Luis Rodríguez Rubio <luis.rodriguez@post.au.dk>", "Sam Martin Vargas Giagnocavo <sam.martin@post.au.dk>"]
description = "Using Minimum Spanning Trees as an alternative to Gusfield's guide tree"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.8" }
serde-wasm-bindgen = { version = "0.4.3" } 

[dev-dependencies]
criterion = "0.3"

# BENCHMARKS

[[bench]]
name = "alignment"
path = "src/benchmarks/alignment.rs"
harness = false

[[bench]]
name = "gusfields"
path = "src/benchmarks/gusfields.rs"
harness = false